templates/pontoon_template.yaml
---
# Source: pontoon/templates/network-policies.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-control-plane-traffic
  labels:
    release: release-name
    heritage: Helm
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          linkerd.io/control-plane-ns: linkerd
    ports:
    - port: 4143
      protocol: TCP
    - port: 4191
      protocol: TCP
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          linkerd.io/control-plane-ns: linkerd
  policyTypes:
  - Ingress
  - Egress
---
# Source: pontoon/templates/network-policies.yaml
# Allow for incoming public traffic
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-allow-internet-ingress
spec:
  podSelector:
    matchLabels:
      networking/allow-internet-ingress: "true"
  ingress:
    - from: []
  policyTypes:
    - Ingress
---
# Source: pontoon/templates/network-policies.yaml
# Allow for outgoing traffic to external services
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: release-name-allow-internet-egress
spec:
  podSelector:
    matchLabels:
      networking/allow-internet-egress: "true"
  egress:
    - {}
  policyTypes:
    - Egress
---
# Source: pontoon/templates/network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
spec:
  podSelector:
    matchLabels:
      app: redis
      release: release-name
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: redis
          release: release-name
    ports:
    - port: 4143
      protocol: TCP
    - port: 6379
      protocol: TCP
    - port: 26379
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          networking/allow-redis-access: "true"
    ports:
    - port: 4143
      protocol: TCP
    - port: 6379
      protocol: TCP
    - port: 26379
      protocol: TCP
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: redis
          release: release-name
    ports:
    - port: 4143
      protocol: TCP
    - port: 6379
      protocol: TCP
    - port: 26379
      protocol: TCP
  policyTypes:
  - Ingress
  - Egress
---
# Source: pontoon/charts/redis/templates/redis-ha-announce-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-redis-announce-0
  namespace: "default"
  labels:
    app: redis
    heritage: "Helm"
    release: "release-name"
    chart: redis-4.12.15
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  publishNotReadyAddresses: true
  type: ClusterIP
  ports:
  - name: tcp-server
    port: 6379
    protocol: TCP
    targetPort: redis
  - name: tcp-sentinel
    port: 26379
    protocol: TCP
    targetPort: sentinel
  selector:
    release: release-name
    app: redis
    "statefulset.kubernetes.io/pod-name": release-name-redis-server-0
---
# Source: pontoon/charts/redis/templates/redis-ha-announce-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-redis-announce-1
  namespace: "default"
  labels:
    app: redis
    heritage: "Helm"
    release: "release-name"
    chart: redis-4.12.15
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  publishNotReadyAddresses: true
  type: ClusterIP
  ports:
  - name: tcp-server
    port: 6379
    protocol: TCP
    targetPort: redis
  - name: tcp-sentinel
    port: 26379
    protocol: TCP
    targetPort: sentinel
  selector:
    release: release-name
    app: redis
    "statefulset.kubernetes.io/pod-name": release-name-redis-server-1
---
# Source: pontoon/charts/redis/templates/redis-ha-announce-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-redis-announce-2
  namespace: "default"
  labels:
    app: redis
    heritage: "Helm"
    release: "release-name"
    chart: redis-4.12.15
  annotations:
    service.alpha.kubernetes.io/tolerate-unready-endpoints: "true"
spec:
  publishNotReadyAddresses: true
  type: ClusterIP
  ports:
  - name: tcp-server
    port: 6379
    protocol: TCP
    targetPort: redis
  - name: tcp-sentinel
    port: 26379
    protocol: TCP
    targetPort: sentinel
  selector:
    release: release-name
    app: redis
    "statefulset.kubernetes.io/pod-name": release-name-redis-server-2
---
# Source: pontoon/charts/redis/templates/redis-ha-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-redis
  namespace: "default"
  labels:
    app: redis
    heritage: "Helm"
    release: "release-name"
    chart: redis-4.12.15
  annotations:
spec:
  type: ClusterIP
  clusterIP: None
  ports:
  - name: tcp-server
    port: 6379
    protocol: TCP
    targetPort: redis
  - name: tcp-sentinel
    port: 26379
    protocol: TCP
    targetPort: sentinel
  selector:
    release: release-name
    app: redis
---
# Source: pontoon/templates/pontoon-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-pontoon
  labels:
    helm.sh/chart: pontoon-2.2.0
    app.kubernetes.io/name: pontoon
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "db4dd60"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: release-name-pontoon
    component: "pontoon"
---
# Source: pontoon/templates/pontoon-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-pontoon
  labels:
    app: release-name-pontoon
    chart: pontoon-2.2.0
    heritage: Helm
    release: release-name
    component: "pontoon"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-pontoon
      heritage: Helm
      release: release-name
      component: "pontoon"
  template:
    metadata:
      annotations:
        checksum/pontoon-secrets: 2a32a304df6c36b0e97b2f51b1870f89350fb29d15ac2c88ba3518c09c9d3b46
        checksum/pontoon-ssh-secrets: 73ff08b4018cc84a35a6b10246c6ced87a257f830b8e4cffb19ab67b33cbae31
        checksum/pontoon-settings: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/pontoon-unsafe-wsgi: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
      labels:
        app: release-name-pontoon
        chart: pontoon-2.2.0
        heritage: Helm
        release: release-name
        component: "pontoon"
    spec:
      imagePullSecrets:
      serviceAccountName: release-name-pontoon
      securityContext:
        {}
      containers:
        - name: pontoon
          securityContext:
            {}
          image: "skillsnetwork/pontoon:db4dd60"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
              protocol: TCP
          command: ["gunicorn"]
          args:
            - pontoon.wsgi:application
            - --bind=0.0.0.0
          # TODO - add livenessProbe and readinessProbe
          # Pontoon does not seem to have a health check endpoint...
          # Maybe consider adding one to upstream
          resources:
            {}
          volumeMounts:
      volumes:
---
# Source: pontoon/templates/pontoon-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-pontoon-worker
  labels:
    app: release-name-pontoon
    chart: pontoon-2.2.0
    heritage: Helm
    release: release-name
    component: "pontoon-worker"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: release-name-pontoon
      heritage: Helm
      release: release-name
      component: "pontoon-worker"
  template:
    metadata:
      annotations:
        checksum/pontoon-secrets: 2a32a304df6c36b0e97b2f51b1870f89350fb29d15ac2c88ba3518c09c9d3b46
        checksum/pontoon-ssh-secrets: 73ff08b4018cc84a35a6b10246c6ced87a257f830b8e4cffb19ab67b33cbae31
        checksum/pontoon-settings: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
      labels:
        app: release-name-pontoon
        chart: pontoon-2.2.0
        heritage: Helm
        release: release-name
        networking/allow-redis-access: "true"
        component: "pontoon-worker"
    spec:
      imagePullSecrets:
      serviceAccountName: release-name-pontoon
      securityContext:
        {}
      containers:
        - name: pontoon-worker
          securityContext:
            {}
          image: "skillsnetwork/pontoon:db4dd60"
          imagePullPolicy: IfNotPresent
          command: ["celery"]
          args:
            - worker
            - --app=pontoon.base.celeryapp
            - --loglevel=info
            - --without-gossip
            - --without-mingle
            - --without-heartbeat
          resources:
            {}
          volumeMounts:
      volumes:
---
# Source: pontoon/charts/redis/templates/redis-ha-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-redis-server
  namespace: "default"
  labels:
    release-name-redis: replica
    app: redis
    heritage: "Helm"
    release: "release-name"
    chart: redis-4.12.15
  annotations:
    {}
spec:
  selector:
    matchLabels:
      release: release-name
      app: redis
  serviceName: release-name-redis
  replicas: 3
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        checksum/init-config: 69343ceaec7ebc8b839acf02c51314464e772df7ad1a5f3a5ed7a9db62e75647
      labels:
        release: release-name
        app: redis
        release-name-redis: replica
    spec:
      terminationGracePeriodSeconds: 60
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: redis
                  release: release-name
                  release-name-redis: replica
              topologyKey: kubernetes.io/hostname
      securityContext:
        fsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
      serviceAccountName: release-name-redis
      automountServiceAccountToken: false
      containers:
      - name: redis
        image: redis:6.0.7-alpine
        imagePullPolicy: IfNotPresent
        command:
        - redis-server
        args:
        - /data/conf/redis.conf
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 5
          exec:
            command:
              - sh
              - -c
              - /health/redis_liveness.sh
        readinessProbe:
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 5
          exec:
            command:
              - sh
              - -c
              - /health/redis_readiness.sh
        resources:
          {}
        ports:
        - name: redis
          containerPort: 6379
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /health
          name: health
        lifecycle:
          {}
      - name: sentinel
        image: redis:6.0.7-alpine
        imagePullPolicy: IfNotPresent
        command:
          - redis-sentinel
        args:
          - /data/conf/sentinel.conf
        livenessProbe:
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 15
          successThreshold: 1
          failureThreshold: 5
          exec:
            command:
              - sh
              - -c
              - /health/sentinel_liveness.sh
        readinessProbe:
          initialDelaySeconds: 30
          periodSeconds: 15
          timeoutSeconds: 15
          successThreshold: 3
          failureThreshold: 5
          exec:
            command:
              - sh
              - -c
              - /health/sentinel_liveness.sh
        resources:
          {}
        ports:
          - name: sentinel
            containerPort: 26379
        volumeMounts:
        - mountPath: /data
          name: data
        - mountPath: /health
          name: health
        lifecycle:
          {}
      volumes:
      - name: config
        configMap:
          name: release-name-redis-configmap
      - name: health
        configMap:
          name: release-name-redis-health-configmap
          defaultMode: 0755
  volumeClaimTemplates:
  - metadata:
      name: data
      annotations:
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "10Gi"
---
# Source: pontoon/templates/image-pull-secrets.yaml
# Loop through the imagePullSecrets to create image pull secrets
---
# Source: pontoon/templates/pontoon-ssh-secrets.yaml
# SSH Keys and config are used to authenticate with VCS servers via SSH
# Learn more at
---
# Source: pontoon/charts/redis/templates/tests/test-redis-ha-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: release-name-redis-configmap-test
  labels:
    app: redis
    heritage: "Helm"
    release: "release-name"
    chart: redis-4.12.15
  annotations:
    "helm.sh/hook": test-success
spec:
  containers:
  - name: check-init
    image: koalaman/shellcheck:v0.5.0
    args:
    - --shell=sh
    - /readonly-config/init.sh
    volumeMounts:
    - name: config
      mountPath: /readonly-config
      readOnly: true
  restartPolicy: Never
  volumes:
  - name: config
    configMap:
      name: release-name-redis-configmap
